RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/09_0003/09_merged.txt
/home/dimpling/AutoSpec/out/09_0003/09_merged.c:43:3: error: unterminated comment
   43 |   /* Invariant for the first loop */;
      |   ^
